20110628 CVS commit smbolton (0.6.9.0)

* MIDI non-registered parameters (NRPNs) can now be used to change
    any of the operator parameters for a plugin instance's current
    patch on-the-fly. Thanks to Jamie Bullock for contributing this
    code.

* It is now possible to ./configure hexter to build the GTK+ user
    interface, the text-mode UI, both, or neither (again, thanks to
    Jamie).

* The GTK+ GUI now requires GTK+ 2.4 or later.

* hexter may now be built to use floating-point math in its audio
    rendering. There is a new '--enable-floating-point' ./configure
    option, and a simple test harness in the fptest/ directory.

* Both the hexter GUI and tx_edit include even more patch loading
    enhancements from Martin Tarenskeen.

* The synthesis code has been simplified, so the once-separate car()
    and mod() functions are now just a single op(), which means less
    cache pressure for both code and data.

* There should be some other minor speed-ups as well: removed a
    bunch of slow unsigned to float casts, and fixed some constant
    expressions that were not being optimized.

* Oops. GUI 'sample-rate' method broke 'quit'.

* GUI no longer segfaults if started with no arguments.

20090103 version 0.6.2

* Silently ignore 'sample-rate' method.

* Fixed GtkSpinButton adjustments to avoid page_size warning with
    GTK+ >=2.14.

* Added Martin Tarenskeen's patch loading enhancements to
    extra/tx_edit.c.

20070411 version 0.6.1

* hexter now installs as DSSI plugin 'hexter', just like the 0.5.9
    and earlier versions, eliminating the trouble the versioned
    plugin names would cause distribution packagers.  The plugin
    files installed are again:
        <prefix>/lib/dssi/hexter/hexter_gtk
        <prefix>/lib/dssi/hexter.so
        <prefix>/lib/dssi/hexter.la

    Also, there is now a 'disable LFO/Mod/Perf (0.5.x compatibility)'
    option in the hexter GUI which disables the version 0.6.x LFO,