@@ -108,6 +108,7 @@ dx7_patchbank_load(const char *filename, dx7_patch_t *firstpatch,
         return 0;
     }
     fclose(fp);
+    filename_length = strlen (filename);
 
     /* check if the file is a standard MIDI file */
     if (raw_patch_data[0] == 0x4d &&	/* "M" */
@@ -163,10 +164,21 @@ dx7_patchbank_load(const char *filename, dx7_patch_t *firstpatch,
         count = filelength / DX7_VOICE_SIZE_PACKED;
 
     /* Dr.T TX7 file needs special treatment */
-    filename_length = strlen (filename);
     if ((!strcmp(filename + filename_length - 4, ".TX7") ||
          !strcmp(filename + filename_length - 4, ".tx7")) && filelength == 8192) {
 
+        count = 32;
+        filelength = 4096;
+    }
+
+    /* Transform XSyn file also needs special treatment */
+    if ((!strcmp(filename + filename_length - 4, ".BNK") ||
+         !strcmp(filename + filename_length - 4, ".bnk")) && filelength == 8192) {
+
+        for (i=0; i<32; i++)
+        {
+            memmove(raw_patch_data + 128*i, raw_patch_data + 256*i, 128);
+        }
         count = 32;
         filelength = 4096;
     }
@@ -179,8 +191,9 @@ dx7_patchbank_load(const char *filename, dx7_patch_t *firstpatch,
         filelength = 4096;
     }
 
-    /* Voyetra SIDEMAN DX/TX */
-    if (filelength == 9816 &&
+    /* Voyetra SIDEMAN DX/TX
+     * Voyetra Patchmaster DX7/TX7 */
+    if ((filelength == 9816 || filelength == 5663) &&
         raw_patch_data[0] == 0xdf &&
         raw_patch_data[1] == 0x05 &&
         raw_patch_data[2] == 0x01 && raw_patch_data[3] == 0x00) {
@@ -189,7 +202,7 @@ dx7_patchbank_load(const char *filename, dx7_patch_t *firstpatch,
         datastart = 0x60f;
     }
 
-    /* Yamaha DX200 editor .DX2 file */
+    /* Yamaha DX200 editor .DX2 */
     if ((!strcmp (filename + filename_length - 4, ".DX2") ||
          !strcmp (filename + filename_length - 4, ".dx2"))
         && filelength == 326454)
